// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`infoTable > should work with default props 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  margin: 0;
  width: 100%;
}

.emotion-0 .emotion-2 {
  width: 100%;
}

.emotion-3 {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  border-bottom: 1px #d9dadd solid;
  padding-block: 1rem;
}

.emotion-3:first-of-type {
  padding-top: 0;
}

.emotion-3:last-of-type {
  padding-bottom: 0;
  border-bottom-color: transparent;
}

.emotion-3>*:not(:last-child) {
  padding-right: 1rem;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  min-width: 0;
  width: 100%;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-7 {
  font-weight: 500;
  color: #222638;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
}

.emotion-9 {
  color: #3f4250;
  margin: 0;
  min-width: 0;
  width: 100%;
}

.emotion-11 {
  display: block;
  min-width: 0;
  width: 100%;
}

.emotion-11>* {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 0.5rem;
}

.emotion-30 {
  display: grid;
  grid-template-columns: 2fr 1fr;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  border-bottom: 1px #d9dadd solid;
  padding-block: 1rem;
}

.emotion-30:first-of-type {
  padding-top: 0;
}

.emotion-30:last-of-type {
  padding-bottom: 0;
  border-bottom-color: transparent;
}

.emotion-30>*:not(:last-child) {
  padding-right: 1rem;
}

.emotion-49 {
  display: grid;
  grid-template-columns: 1fr;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  border-bottom: 1px #d9dadd solid;
  padding-block: 1rem;
}

.emotion-49:first-of-type {
  padding-top: 0;
}

.emotion-49:last-of-type {
  padding-bottom: 0;
  border-bottom-color: transparent;
}

.emotion-49>*:not(:last-child) {
  padding-right: 1rem;
}

<div
    data-testid="testing"
  >
    <dl
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3 emotion-4"
      >
        <div
          class="emotion-5 emotion-6"
        >
          <dt
            class="emotion-7 emotion-8"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-9 emotion-10"
          >
            <div
              class="emotion-11 emotion-12 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
        <div
          class="emotion-5 emotion-6"
        >
          <dt
            class="emotion-7 emotion-8"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-9 emotion-10"
          >
            <div
              class="emotion-11 emotion-12 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
        <div
          class="emotion-5 emotion-6"
        >
          <dt
            class="emotion-7 emotion-8"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-9 emotion-10"
          >
            <div
              class="emotion-11 emotion-12 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
      </div>
      <div
        class="emotion-2 emotion-30 emotion-4"
      >
        <div
          class="emotion-5 emotion-6"
        >
          <dt
            class="emotion-7 emotion-8"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-9 emotion-10"
          >
            <div
              class="emotion-11 emotion-12 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell with more text
            </div>
          </dd>
        </div>
        <div
          class="emotion-5 emotion-6"
        >
          <dt
            class="emotion-7 emotion-8"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-9 emotion-10"
          >
            <div
              class="emotion-11 emotion-12 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
      </div>
      <div
        class="emotion-2 emotion-49 emotion-4"
      >
        <div
          class="emotion-5 emotion-6"
        >
          <dt
            class="emotion-7 emotion-8"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-9 emotion-10"
          >
            <div
              class="emotion-11 emotion-12 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
      </div>
      <div
        class="emotion-2 emotion-3 emotion-4"
      >
        <div
          class="emotion-5 emotion-6"
        >
          <dt
            class="emotion-7 emotion-8"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-9 emotion-10"
          >
            <div
              class="emotion-11 emotion-12 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell
            </div>
          </dd>
        </div>
        <div
          class="emotion-5 emotion-6"
        >
          <dt
            class="emotion-7 emotion-8"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-9 emotion-10"
          >
            <div
              class="emotion-11 emotion-12 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
        <div
          class="emotion-5 emotion-6"
        >
          <dt
            class="emotion-7 emotion-8"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-9 emotion-10"
          >
            <div
              class="emotion-11 emotion-12 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;

exports[`infoTable > should work with multiLine 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  margin: 0;
  width: 100%;
}

.emotion-0 .emotion-2 {
  width: 100%;
}

.emotion-3 {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  border-bottom: 1px #d9dadd solid;
  padding-block: 1rem;
}

.emotion-3:first-of-type {
  padding-top: 0;
}

.emotion-3:last-of-type {
  padding-bottom: 0;
  border-bottom-color: transparent;
}

.emotion-3>*:not(:last-child) {
  padding-right: 1rem;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  min-width: 0;
  width: 100%;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-7 {
  font-weight: 500;
  color: #222638;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
}

.emotion-9 {
  color: #3f4250;
  margin: 0;
  min-width: 0;
  width: 100%;
}

.emotion-11 {
  display: block;
  min-width: 0;
  width: 100%;
}

.emotion-11>* {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 0.5rem;
}

.emotion-30 {
  display: grid;
  grid-template-columns: 2fr 1fr;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  border-bottom: 1px #d9dadd solid;
  padding-block: 1rem;
}

.emotion-30:first-of-type {
  padding-top: 0;
}

.emotion-30:last-of-type {
  padding-bottom: 0;
  border-bottom-color: transparent;
}

.emotion-30>*:not(:last-child) {
  padding-right: 1rem;
}

.emotion-49 {
  display: grid;
  grid-template-columns: 1fr;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  border-bottom: 1px #d9dadd solid;
  padding-block: 1rem;
}

.emotion-49:first-of-type {
  padding-top: 0;
}

.emotion-49:last-of-type {
  padding-bottom: 0;
  border-bottom-color: transparent;
}

.emotion-49>*:not(:last-child) {
  padding-right: 1rem;
}

<div
    data-testid="testing"
  >
    <dl
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3 emotion-4"
      >
        <div
          class="emotion-5 emotion-6"
        >
          <dt
            class="emotion-7 emotion-8"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-9 emotion-10"
          >
            <div
              class="emotion-11 emotion-12 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
        <div
          class="emotion-5 emotion-6"
        >
          <dt
            class="emotion-7 emotion-8"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-9 emotion-10"
          >
            <div
              class="emotion-11 emotion-12 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
        <div
          class="emotion-5 emotion-6"
        >
          <dt
            class="emotion-7 emotion-8"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-9 emotion-10"
          >
            <div
              class="emotion-11 emotion-12 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
      </div>
      <div
        class="emotion-2 emotion-30 emotion-4"
      >
        <div
          class="emotion-5 emotion-6"
        >
          <dt
            class="emotion-7 emotion-8"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-9 emotion-10"
          >
            <div
              class="emotion-11 emotion-12 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell with more text
            </div>
          </dd>
        </div>
        <div
          class="emotion-5 emotion-6"
        >
          <dt
            class="emotion-7 emotion-8"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-9 emotion-10"
          >
            <div
              class="emotion-11 emotion-12 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
      </div>
      <div
        class="emotion-2 emotion-49 emotion-4"
      >
        <div
          class="emotion-5 emotion-6"
        >
          <dt
            class="emotion-7 emotion-8"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-9 emotion-10"
          >
            <div
              class="emotion-11 emotion-12 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
      </div>
      <div
        class="emotion-2 emotion-3 emotion-4"
      >
        <div
          class="emotion-5 emotion-6"
        >
          <dt
            class="emotion-7 emotion-8"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-9 emotion-10"
          >
            <div
              class="emotion-11 emotion-12 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell
            </div>
          </dd>
        </div>
        <div
          class="emotion-5 emotion-6"
        >
          <dt
            class="emotion-7 emotion-8"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-9 emotion-10"
          >
            <div
              class="emotion-11 emotion-12 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
        <div
          class="emotion-5 emotion-6"
        >
          <dt
            class="emotion-7 emotion-8"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-9 emotion-10"
          >
            <div
              class="emotion-11 emotion-12 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;

exports[`infoTable > should work with width 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  margin: 0;
  width: 100%;
}

.emotion-0 .emotion-2 {
  width: 30%;
}

.emotion-3 {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  border-bottom: 1px #d9dadd solid;
  padding-block: 1rem;
}

.emotion-3:first-of-type {
  padding-top: 0;
}

.emotion-3:last-of-type {
  padding-bottom: 0;
  border-bottom-color: transparent;
}

.emotion-3>*:not(:last-child) {
  padding-right: 1rem;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  min-width: 0;
  width: 100%;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-7 {
  font-weight: 500;
  color: #222638;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
}

.emotion-9 {
  color: #3f4250;
  margin: 0;
  min-width: 0;
  width: 100%;
}

.emotion-11 {
  display: block;
  min-width: 0;
  width: 100%;
}

.emotion-11>* {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 0.5rem;
}

.emotion-30 {
  display: grid;
  grid-template-columns: 2fr 1fr;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  border-bottom: 1px #d9dadd solid;
  padding-block: 1rem;
}

.emotion-30:first-of-type {
  padding-top: 0;
}

.emotion-30:last-of-type {
  padding-bottom: 0;
  border-bottom-color: transparent;
}

.emotion-30>*:not(:last-child) {
  padding-right: 1rem;
}

.emotion-49 {
  display: grid;
  grid-template-columns: 1fr;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  border-bottom: 1px #d9dadd solid;
  padding-block: 1rem;
}

.emotion-49:first-of-type {
  padding-top: 0;
}

.emotion-49:last-of-type {
  padding-bottom: 0;
  border-bottom-color: transparent;
}

.emotion-49>*:not(:last-child) {
  padding-right: 1rem;
}

<div
    data-testid="testing"
  >
    <dl
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3 emotion-4"
      >
        <div
          class="emotion-5 emotion-6"
        >
          <dt
            class="emotion-7 emotion-8"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-9 emotion-10"
          >
            <div
              class="emotion-11 emotion-12 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
        <div
          class="emotion-5 emotion-6"
        >
          <dt
            class="emotion-7 emotion-8"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-9 emotion-10"
          >
            <div
              class="emotion-11 emotion-12 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
        <div
          class="emotion-5 emotion-6"
        >
          <dt
            class="emotion-7 emotion-8"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-9 emotion-10"
          >
            <div
              class="emotion-11 emotion-12 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
      </div>
      <div
        class="emotion-2 emotion-30 emotion-4"
      >
        <div
          class="emotion-5 emotion-6"
        >
          <dt
            class="emotion-7 emotion-8"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-9 emotion-10"
          >
            <div
              class="emotion-11 emotion-12 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell with more text
            </div>
          </dd>
        </div>
        <div
          class="emotion-5 emotion-6"
        >
          <dt
            class="emotion-7 emotion-8"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-9 emotion-10"
          >
            <div
              class="emotion-11 emotion-12 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
      </div>
      <div
        class="emotion-2 emotion-49 emotion-4"
      >
        <div
          class="emotion-5 emotion-6"
        >
          <dt
            class="emotion-7 emotion-8"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-9 emotion-10"
          >
            <div
              class="emotion-11 emotion-12 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
      </div>
      <div
        class="emotion-2 emotion-3 emotion-4"
      >
        <div
          class="emotion-5 emotion-6"
        >
          <dt
            class="emotion-7 emotion-8"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-9 emotion-10"
          >
            <div
              class="emotion-11 emotion-12 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell
            </div>
          </dd>
        </div>
        <div
          class="emotion-5 emotion-6"
        >
          <dt
            class="emotion-7 emotion-8"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-9 emotion-10"
          >
            <div
              class="emotion-11 emotion-12 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
        <div
          class="emotion-5 emotion-6"
        >
          <dt
            class="emotion-7 emotion-8"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-9 emotion-10"
          >
            <div
              class="emotion-11 emotion-12 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;
